--- a/.dockerignore
+++ b/.dockerignore
@@ -13,6 +13,8 @@ build/
 .mypy_cache/
 .coverage
 htmlcov/
+.tox/
+.hypothesis/
 
 # Virtual environments
 venv/
@@ -25,6 +27,7 @@ env/
 .idea/
 *.swp
 *.swo
+.DS_Store
 
 # Git
 .git/
@@ -40,19 +43,21 @@ README.md
 tests/
 .pytest_cache/
 
+# CI/CD
+.github/
+
 # Frontend
 frontend/
 
-# CI/CD
-.github/
+# Logs
+*.log
+logs/
 
 # Environment
 .env
 .env.*
 
-# Development
-notebooks/
-scripts/
-
-# Data (copy only what's needed)
-data/processed/
+# Temporary files
+*.tmp
+temp/
+tmp/
