Updated Dockerfile to not require poetry.lock - Use single-stage build with Poetry installed - Poetry will generate lock file during build if needed - More reliable for CI/CD environments

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,23 +1,54 @@
-# Build stage
-FROM python:3.11.2-slim as builder
-
-RUN pip install poetry==1.8.3
-
-WORKDIR /app
-COPY pyproject.toml poetry.lock ./
-RUN poetry export -f requirements.txt --output requirements.txt --without-hashes
-
-# Runtime stage
 FROM python:3.11.2-slim
 
-WORKDIR /app
-COPY --from=builder /app/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    API_HOST=0.0.0.0 \
+    API_PORT=8000 \
+    ENVIRONMENT=production \
+    POETRY_VERSION=1.8.3 \
+    POETRY_HOME=/opt/poetry \
+    POETRY_NO_INTERACTION=1 \
+    POETRY_VIRTUALENVS_CREATE=false
 
-COPY src/ ./src/
-COPY models/ ./models/
-COPY data/ ./data/
+# Install system dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Poetry
+RUN curl -sSL https://install.python-poetry.org | python3 - && \
+    ln -s /opt/poetry/bin/poetry /usr/local/bin/poetry
+
+# Create non-root user
+RUN useradd -m -u 1000 appuser && \
+    mkdir -p /app && \
+    chown -R appuser:appuser /app
+
+WORKDIR /app
+
+# Copy dependency files (pyproject.toml is enough, poetry will handle the rest)
+COPY --chown=appuser:appuser pyproject.toml ./
+
+# Install dependencies (this will generate poetry.lock if needed)
+RUN poetry install --only main --no-root
+
+# Switch to non-root user
+USER appuser
+
+# Copy application code
+COPY --chown=appuser:appuser src/ ./src/
+COPY --chown=appuser:appuser models/ ./models/
+COPY --chown=appuser:appuser data/ ./data/
+COPY --chown=appuser:appuser scripts/ ./scripts/
+
+# Generate dataset and train model
+RUN python scripts/generate_iris_data.py && \
+    python scripts/train_model.py
 
 EXPOSE 8000
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
 
 CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
