--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pydantic = "^2.9.2"
 pydantic-settings = "^2.6.0"
 python-multipart = "^0.0.12"
 joblib = "^1.4.2"
+shap = "^0.49.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
