--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pydantic-settings = "^2.6.0"
 python-multipart = "^0.0.12"
 joblib = "^1.4.2"
 shap = "^0.49.1"
+scipy = "^1.16.3"
+requests = "^2.32.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
