--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://your-api.onrender.com
+VITE_API_BASE_URL=https://iris-ml-pipeline-api.onrender.com
 VITE_API_TIMEOUT=10000
